add nav links and style

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,15 @@
-<p>
-  nav works!
-</p>
+<header>
+  <div class="container">
+    <a href="/" class="logo">MilkBar</a>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/shop">Shop</a></li>
+        <li><a href="/classes">Classes</a></li>
+        <li><a href="/recipes">Recipes</a></li>
+        <li><a href="/locations">Locations</a></li>
+        <li><a href="/about">About</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
