--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container">
-    <a href="/" class="logo">MilkBar</a>
+    <a href="/" class="logo">{{ MilkBar }}</a>
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
