--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900');
+
+body, html {
+    height: 100%;
+    margin: 0 auto;
+}
+
 body {
+    font-family: Roboto;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 26px;
     background-color: pink;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 30% auto;
+}
+
+    a {
+        color: black;
+    }
+
+
+section {
+    width: 80%;
+    margin: 0 auto;
+    padding: 2em;
 }
