--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,12 @@ body, html {
     margin: 0 auto;
 }
 
+
+
 body {
     font-family: Roboto;
     font-weight: 900;
-    font-size: 24px;
+    font-size: 1.6rem;
     line-height: 26px;
     background-color: pink;
 }
@@ -17,16 +19,22 @@ a {
     text-decoration: none;
 }
 
+.logo {
+    font-family: Pacifico;
+    color: hotpink;
+    font-weight: bold;  
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
-    padding: 10px;
+    padding: 1.3em;
     display: grid;
     grid-template-columns: 30% auto;
 }
 
     a {
-        color: black;
+        color:black;
     }
 
 
