add logo styling

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <header>
-  <div class="container">
-    <a href="/" class="logo">{{ MilkBar }}</a>
+  <div class="container-logo">
+    <a href="/" class="logo">Milk</a>
     <nav>
       <ul>
         <li><a href="/shop">Shop</a></li>
