--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -9,15 +9,19 @@ header {
     font-family: Pacifico;
     color: hotpink;
     font-weight: bold;
+    font-size: 100px;
+    text-transform: lowercase;
+    margin: 22px;
+    
 }
 
-nav {
+/* nav {
     justify-self: right;
-}
+} */
 
 ul {
     list-style-type: none;
-    margin: 0; padding: 0;
+    margin: 20px; padding: 0;
 }
 
 li {
@@ -25,7 +29,7 @@ li {
 }
 
 a {
-    padding: 20px;
+    padding: 10px;
     text-transform: uppercase;
     font-size: 24px;
 }
