--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,20 @@
 <app-nav></app-nav>
 
+<section class="section-first">
+    <div class="content">
+        <div class="neon-logo">
+                <img src="./assets/img/Milk-neon.gif" alt="Description" />
+        </div>
+
+        <div class="links">
+            <ul>
+                <li><a href="/shop">Shop</a></li>
+                <li><a href="/classes">Classes</a></li>
+                <li><a href="/recipes">Recipes</a></li>
+                <li><a href="/locations">Locations</a></li>
+                <li><a href="/about">About</a></li>
+            </ul>  
+        </div>
+    </div>
+</section>
+
