--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-nav></app-nav>
 
 <section class="section-first">
+    <div class="cake">
+    <img src="./assets/img/cake_transparent.jpeg">
+    </div>
     <div class="content">
         <div class="neon-logo">
                 <img src="./assets/img/Milk-neon.gif" alt="Description" />
