--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 body, html {
     height: 100%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -41,7 +42,7 @@ a {
 
 
 section {
-    width: 100%;
-    margin: 0 auto;
-    padding: 2em;
+    /* width: 100%; */
+    /* margin: 0 auto; */
+    /* padding: 2em; */
 }
