--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,39 @@
 <app-nav></app-nav>
 
 <section class="section-first">
-    <div class="cake">
-    <img src="./assets/img/cake_transparent.jpeg">
+    
+    <div class="background" role="img" style="background-image: url(./assets/img/cake_transparent.jpeg)">
+        <!-- <img src="./assets/img/cake_transparent.jpeg"> -->
     </div>
-    <div class="content">
-        <div class="neon-logo">
-                <img src="./assets/img/Milk-neon.gif" alt="Description" />
-        </div>
 
-        <div class="links">
-            <ul>
-                <li><a href="/shop">Shop</a></li>
-                <li><a href="/classes">Classes</a></li>
-                <li><a href="/recipes">Recipes</a></li>
-                <li><a href="/locations">Locations</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>  
-        </div>
+    <!-- <div class="content"> -->
+    <div class="neon-logo">
+        <img src="./assets/img/Milk-neon.gif" alt="Description" />
     </div>
+
+    <div class="links">
+        <ul>
+            <li><a href="/shop">Shop</a></li>
+            <li><a href="/classes">Classes</a></li>
+            <li><a href="/recipes">Recipes</a></li>
+            <li><a href="/locations">Locations</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>  
+    </div>
+
+    <div class="featured">
+        <h4>EPIC DAD. EPIC DESSERT.</h4>
+        <br>
+        <p>Your pop rocks, so celebrate him with something sweet and seriously delicious. Grab a gift card or head into one of our stores for a last minute cake!</p>
+    </div>
+    
+<!-- </div> -->
 </section>
 
+<!-- <section class="seasonal">
+    <div>
+
+    </div>
+
+</section>
+ -->
