--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,15 +18,23 @@
     background-size: cover;
 }
 
-.links {
-    margin-top: 400px;
-    float: right;
+.links {    
+    grid-column-start: 2;
+    grid-column-end: span 1;
+    grid-row-start: 2;
+    grid-row-end: span 1;
+    margin-top: 60px;
 }
 
 .neon-logo {
+    grid-column-start: 2;
+    grid-column-end: span 1;
+    grid-row-start: 1;
+    grid-row-end: span 1;
+    justify-self: center;
     margin-top: 100px;
-    margin-left: 700px;
-    float: right;
+    /* margin-left: 700px;
+    float: right; */
 }
 
 ul {
@@ -57,7 +65,7 @@ a {
     font-size: 18px;
     width: 300px;
     
-    margin-top: 80px;
+    margin-top: 100px;
     padding: 30px;
     background-color: rgb(255, 241, 224);
 }
