--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,9 @@
 <section class="section-first">
     
     <div class="background" role="img" style="background-image: url(./assets/img/cake_transparent.jpeg)">
-        <!-- <img src="./assets/img/cake_transparent.jpeg"> -->
     </div>
 
-    <!-- <div class="content"> -->
+    
     <div class="neon-logo">
         <img src="./assets/img/Milk-neon.gif" alt="Description" />
     </div>
@@ -25,15 +24,21 @@
         <h4>EPIC DAD. EPIC DESSERT.</h4>
         <br>
         <p>Your pop rocks, so celebrate him with something sweet and seriously delicious. Grab a gift card or head into one of our stores for a last minute cake!</p>
+        <a id ="store" href="/locations">Find a store</a>
     </div>
     
-<!-- </div> -->
+
 </section>
 
-<!-- <section class="seasonal">
-    <div>
+<section class="section-seasonal">
+    <div class="heading">
+        <h3>CELEBRATE DAD</h3>
+        <p>Your dad’s the man. But he’s not just any man. He’s the man who<br> taught you everything you know. Or some of what you know. Or that<br> one life altering thing that one time, way back when. Point is, you<br> owe the guy. So don’t get him a basic Father’s Day gift.</p>
+    </div>
+
+    <div class="products-grid">
 
     </div>
 
 </section>
- -->
+
