--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,32 @@
         <p>Your dad’s the man. But he’s not just any man. He’s the man who<br> taught you everything you know. Or some of what you know. Or that<br> one life altering thing that one time, way back when. Point is, you<br> owe the guy. So don’t get him a basic Father’s Day gift.</p>
     </div>
 
-    <div class="products-grid">
+    <div class="products-grid" data-cells-per-row="4">
+        <div class="cell-product">
+                <img src="./assets/img/Chocolate-Pretzel-Cake_800x.jpg" alt="">
+                <p id="products">TOP POP - CHOCOLATE CARAMEL PRETZEL</p>
+        </div>
+        <div class="cell-product">
+            <img src="./assets/img/Fathers-Day-Bday-Truffle-Dozen-4_800x.jpg" alt="">
+            <p id="products">FOR DAD: B'DAY TRUFFLE DOZEN BOX</p>
+        </div>
+        <div class="cell-product">
+            <img src="./assets/img/Comost-Cookie-Cake_800x.jpg" alt="">
+            <p id="products">COMPOST COOKIE CAKE</p>
+        </div>
+        <div class="cell-product">
+            <img src="./assets/img/Chocolate-Birthday-Truffle-Pile-1_800x.jpg" alt="">
+            <p id="products">CHOCOLATE B'DAY TRUFFLE DOZEN BOX</p>
+        </div>
+        
 
     </div>
-
+    <br>
+    <br>
+    <div class="shop-link">
+        <a id="shop-link" href="/shop">Shop Now</a>
+    </div>
+    <br>
+    <br>
 </section>
 
