--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,3 +65,14 @@
     <br>
 </section>
 
+<section class="cookies" role="img" style="background-image: url(./assets/img/Cookie-Assortment-Grid_1400x.jpg)">
+    <div class="content">
+        <h3>GIVE THE GIFT OF<br> COOKIES</h3>
+        <p>Popular opinion. Every occasion is a cookie occasion. Birthdays.<br> Holidays. Humpdays. Basically all the days. And our cookie care packages are the <br>perfect way to send someone a high-five or a hug. Just pick your bundle,<br> and we’ll do the rest.</p>
+    </div>
+    <br>
+    <div class="shop-link">
+    <a id="shop-link" href="/shop">Shop Cookies</a>
+    </div>
+</section>
+
