add greatest hits section with images and links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
     <br>
 </section>
 
-<section class="cookies" role="img" style="background-image: url(./assets/img/Cookie-Assortment-Grid_1400x.jpg)">
+<section class="section-cookies" role="img" style="background-image: url(./assets/img/Cookie-Assortment-Grid_1400x.jpg)">
     <div class="content">
         <h3>GIVE THE GIFT OF<br> COOKIES</h3>
         <p>Popular opinion. Every occasion is a cookie occasion. Birthdays.<br> Holidays. Humpdays. Basically all the days. And our cookie care packages are the <br>perfect way to send someone a high-five or a hug. Just pick your bundle,<br> and we’ll do the rest.</p>
@@ -74,5 +74,29 @@
     <div class="shop-link">
     <a id="shop-link" href="/shop">Shop Cookies</a>
     </div>
+</section>
+
+<section class="section-greatest-hits">
+    <div class="heading">
+        <h3>CHECK OUT OUR GREATEST HITS</h3>
+    </div>
+    <div class="products-grid-3" data-cells-per-row="3">
+        <div class="cell-product">
+            <img src="./assets/img/The-Bday-Baller_800x.jpg" alt="">
+            <p id="products">B'DAY BALLER<br><br>
+            <a id="gh-link" href="/shop">Shop Now</a></p>
+        </div>
+        <div class="cell-product">
+            <img src="./assets/img/Bake-the-Book-1_800x.jpg" alt="">
+            <p id="products">BAKE THE BOOK<br><br>
+            <a id="gh-link" href="/shop">Shop Now</a></p>
+        </div>
+        <div class="cell-product">
+            <img src="./assets/img/Double-Trouble_800x.jpg" alt="">
+            <p id="products">DOUBLE TROUBLE<br><br>
+            <a id="gh-link" href="/shop">Shop Now</a></p>
+        </div>
+    </div>
+
 </section>
 
