--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -149,7 +149,8 @@ img, picture {
 
 }
 
-.cookies {
+/* SECTION COOKIES */
+.section-cookies {
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 700px;
@@ -160,4 +161,36 @@ img, picture {
     text-align: center;
     font-weight: 400;
     font-size: 18px;
+}
+
+/* SECTION GREATEST HITS */
+.section-greatest-hits {
+    background-color: rgb(255, 241, 224);
+    /* text-align: center; */
+    margin-top: -50px;
+}
+
+.products-grid-3 {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: 100%;
+    grid-column-gap: 25px;
+}
+
+.products-grid-3 .product img {
+    min-height: 100px;
+    width: auto;
+    
+}
+
+img, picture {
+    margin: 0;
+    max-width: 100%;
+    padding: 25px;
+}
+
+#gh-link {
+    background-color: rgb(255, 241, 224);
+    color: hotpink;
+    text-decoration: underline;
 }
