--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <section class="section-first">
     
-    <div class="background" role="img" style="background-image: url(./assets/img/cake_transparent.jpeg)">
+    <div class="background" role="img" style="background-image: url(./assets/img/cake_transparent.jpg)">
     </div>
 
     
@@ -21,9 +21,9 @@
     </div>
 
     <div class="featured">
-        <h4>EPIC DAD. EPIC DESSERT.</h4>
+        <h4>NOT YOUR AVERAGE BAKERY</h4>
         <br>
-        <p>Your pop rocks, so celebrate him with something sweet and seriously delicious. Grab a gift card or head into one of our stores for a last minute cake!</p>
+        <p>Milk Bar is a sweet (and occasionally savory) shop that’s been turning familiar treats upside down and on their heads, quietly shaking up the dessert scene since 2008.</p>
         <a id ="store" href="/locations">Find a store</a>
     </div>
     
@@ -32,18 +32,18 @@
 
 <section class="section-seasonal">
     <div class="heading">
-        <h3>CELEBRATE DAD</h3>
-        <p>Your dad’s the man. But he’s not just any man. He’s the man who<br> taught you everything you know. Or some of what you know. Or that<br> one life altering thing that one time, way back when. Point is, you<br> owe the guy. So don’t get him a basic Father’s Day gift.</p>
+        <h3>MEET OUR FAVES</h3>
+        <p>Get to know some of our standout sweets and unexpected sweets. We’ve got unfrosted layer cakes.<br>Cookies that’ll make you question everything. Pie that won’t lie. Truffles with major flave. Undercover gluten-free<br> options. Please note, we don’t have cupcakes or attitude. So c’mon in with an open mind and an appetite for<br> something crazy delicious. PS- We ship nationwide (hint, hint).</p>
     </div>
 
     <div class="products-grid" data-cells-per-row="4">
         <div class="cell-product">
                 <img src="./assets/img/Chocolate-Pretzel-Cake_800x.jpg" alt="">
-                <p id="products">TOP POP - CHOCOLATE CARAMEL PRETZEL</p>
+                <p id="products">CHOCOLATE CARAMEL PRETZEL</p>
         </div>
         <div class="cell-product">
             <img src="./assets/img/Fathers-Day-Bday-Truffle-Dozen-4_800x.jpg" alt="">
-            <p id="products">FOR DAD: B'DAY TRUFFLE DOZEN BOX</p>
+            <p id="products">B'DAY TRUFFLE DOZEN BOX</p>
         </div>
         <div class="cell-product">
             <img src="./assets/img/Comost-Cookie-Cake_800x.jpg" alt="">
@@ -98,5 +98,16 @@
         </div>
     </div>
 
+</section>
+<section class="collage-1" data-img-count="3">
+   
+        <img id="one" src="./assets/img/Polaroids_and_cake_1200x.jpg" alt="">
+        <img id="two" src="./assets/img/Cake_Assembly_1200x.jpg" alt="">
+        <img id="three" src="./assets/img/Classroom_Camera-portrait_1200x.jpg" alt="">
+   <div class="classes-content">
+    <h3>CLASS IS IN <br>SESSION</h3>
+    <p>Get schooled in your second favorite subject--dessert! (We can all agree calculus is #1). Here, you’ll learn the techniques that make our Milk Bar cakes, pies and treats pure dessert magic. Your only homework is to make a little mess and have fun.</p>
+    <a id="shop-link" href="/classes">BROWSE CLASSES</a>
+   </div>
 </section>
 
