--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,113 +1,3 @@
 <app-nav></app-nav>
-
-<section class="section-first">
-    
-    <div class="background" role="img" style="background-image: url(./assets/img/cake_transparent.jpg)">
-    </div>
-
-    
-    <div class="neon-logo">
-        <img src="./assets/img/Milk-neon.gif" alt="Description" />
-    </div>
-
-    <div class="links">
-        <ul>
-            <li><a href="/shop">Shop</a></li>
-            <li><a href="/classes">Classes</a></li>
-            <li><a href="/recipes">Recipes</a></li>
-            <li><a href="/locations">Locations</a></li>
-            <li><a href="/about">About</a></li>
-        </ul>  
-    </div>
-
-    <div class="featured">
-        <h4>NOT YOUR AVERAGE BAKERY</h4>
-        <br>
-        <p>Milk Bar is a sweet (and occasionally savory) shop that’s been turning familiar treats upside down and on their heads, quietly shaking up the dessert scene since 2008.</p>
-        <a id ="store" href="/locations">Find a store</a>
-    </div>
-    
-
-</section>
-
-<section class="section-seasonal">
-    <div class="heading">
-        <h3>MEET OUR FAVES</h3>
-        <p>Get to know some of our standout sweets and unexpected sweets. We’ve got unfrosted layer cakes.<br>Cookies that’ll make you question everything. Pie that won’t lie. Truffles with major flave. Undercover gluten-free<br> options. Please note, we don’t have cupcakes or attitude. So c’mon in with an open mind and an appetite for<br> something crazy delicious. PS- We ship nationwide (hint, hint).</p>
-    </div>
-
-    <div class="products-grid" data-cells-per-row="4">
-        <div class="cell-product">
-                <img src="./assets/img/Chocolate-Pretzel-Cake_800x.jpg" alt="">
-                <p id="products">CHOCOLATE CARAMEL PRETZEL</p>
-        </div>
-        <div class="cell-product">
-            <img src="./assets/img/Fathers-Day-Bday-Truffle-Dozen-4_800x.jpg" alt="">
-            <p id="products">B'DAY TRUFFLE DOZEN BOX</p>
-        </div>
-        <div class="cell-product">
-            <img src="./assets/img/Comost-Cookie-Cake_800x.jpg" alt="">
-            <p id="products">COMPOST COOKIE CAKE</p>
-        </div>
-        <div class="cell-product">
-            <img src="./assets/img/Chocolate-Birthday-Truffle-Pile-1_800x.jpg" alt="">
-            <p id="products">CHOCOLATE B'DAY TRUFFLE DOZEN BOX</p>
-        </div>
-        
-
-    </div>
-    <br>
-    <br>
-    <div class="shop-link">
-        <a id="shop-link" href="/shop">Shop Now</a>
-    </div>
-    <br>
-    <br>
-</section>
-
-<section class="section-cookies" role="img" style="background-image: url(./assets/img/Cookie-Assortment-Grid_1400x.jpg)">
-    <div class="content">
-        <h3>GIVE THE GIFT OF<br> COOKIES</h3>
-        <p>Popular opinion. Every occasion is a cookie occasion. Birthdays.<br> Holidays. Humpdays. Basically all the days. And our cookie care packages are the <br>perfect way to send someone a high-five or a hug. Just pick your bundle,<br> and we’ll do the rest.</p>
-    </div>
-    <br>
-    <div class="shop-link">
-    <a id="shop-link" href="/shop">Shop Cookies</a>
-    </div>
-</section>
-
-<section class="section-greatest-hits">
-    <div class="heading">
-        <h3>CHECK OUT OUR GREATEST HITS</h3>
-    </div>
-    <div class="products-grid-3" data-cells-per-row="3">
-        <div class="cell-product">
-            <img src="./assets/img/The-Bday-Baller_800x.jpg" alt="">
-            <p id="products">B'DAY BALLER<br><br>
-            <a id="gh-link" href="/shop">Shop Now</a></p>
-        </div>
-        <div class="cell-product">
-            <img src="./assets/img/Bake-the-Book-1_800x.jpg" alt="">
-            <p id="products">BAKE THE BOOK<br><br>
-            <a id="gh-link" href="/shop">Shop Now</a></p>
-        </div>
-        <div class="cell-product">
-            <img src="./assets/img/Double-Trouble_800x.jpg" alt="">
-            <p id="products">DOUBLE TROUBLE<br><br>
-            <a id="gh-link" href="/shop">Shop Now</a></p>
-        </div>
-    </div>
-
-</section>
-<section class="collage-1" data-img-count="3">
-   
-        <img id="one" src="./assets/img/Polaroids_and_cake_1200x.jpg" alt="">
-        <img id="two" src="./assets/img/Cake_Assembly_1200x.jpg" alt="">
-        <img id="three" src="./assets/img/Classroom_Camera-portrait_1200x.jpg" alt="">
-   <div class="classes-content">
-    <h3>CLASS IS IN <br>SESSION</h3>
-    <p>Get schooled in your second favorite subject--dessert! (We can all agree calculus is #1). Here, you’ll learn the techniques that make our Milk Bar cakes, pies and treats pure dessert magic. Your only homework is to make a little mess and have fun.</p>
-    <a id="shop-link" href="/classes">BROWSE CLASSES</a>
-   </div>
-</section>
-
+<router-outlet></router-outlet>
+<!-- <app-footer></footer> -->
