--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -1,3 +1,6 @@
-<p>
-  classes works!
-</p>
+<section class="header">
+  <div class="background" role="img" style="background-image: url(./assets/img/Screen_Shot_1200x.png)">
+  </div>
+  <div class="background-color"></div>
+
+</section>
