add classes header description and h1

--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -1,6 +1,16 @@
 <section class="header">
-  <div class="background" role="img" style="background-image: url(./assets/img/Screen_Shot_1200x.png)">
+  <div class="wrapper">
+    <div class="background" role="img" style="background-image: url(./assets/img/Screen_Shot_1200x.png)">
+    </div>
+    <div class="background-color"></div>
+    <h1>CLASSES AT MILK BAR</h1>
   </div>
-  <div class="background-color"></div>
-
+  <div class="class-description">
+    <p>Milk Bar classes focus on the techniques that make our baked treats so uniquely delicious. In our cake classes we’ll show you all the steps for assembling our most popular layer cake flavor combinations (an irresistible balance of cake, spread, frosting, crumbs, and crunch!), and how we transform our cake scraps and turn them into bite sized cake truffles!
+    <br><br>
+    Questions? Check out our Classes FAQ.</p>
+    <br><br>
+    <a id="pink-link" href="">BROWSE CLASSES</a>
+  
+  </div>
 </section>
