--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -230,3 +230,9 @@ img, picture {
     font-weight: 400;
     font-size: 18px;
 }
+
+a {
+    background-color: hotpink;
+    padding: 10px;
+    color: white;
+}
