--- a/src/app/classes/classes.component.css
+++ b/src/app/classes/classes.component.css
@@ -1,10 +1,13 @@
 .header {
-    min-height: 1000px;
-    background-color: white;
+    background-color: #fff1de;
+    text-align: center;
+}
+
+.wrapper {
+    /* min-height: 1000px; */
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr; 
-
+    grid-template-rows: 1fr 60px; 
 }
 
 /* #kitchen {
@@ -21,7 +24,7 @@
     grid-row-end: span 1;
     background-color: #fff1de;
     height: 300px;
-    
+    z-index: -1;
 }
 
 .background {
@@ -34,4 +37,25 @@
     background-size: cover;
     background-position: 50%;
 
+}
+
+h1 {
+    grid-column-start: 4;
+    grid-column-end: span 6;
+    grid-row-start: 2;
+    grid-row-end: span 1;
+    background-color: black;
+    color: white;
+    text-align: center;
+    letter-spacing: 6.5px;
+    padding: 12px;
+    line-height: 34px;
+    margin-top: -30px;
+}
+
+p {
+    font-size: 18px;
+    font-weight: 400;
+    padding-left: 20%;
+    padding-right: 20%;
 }
