add classes model and section with CSS

--- a/src/app/classes/classes.component.css
+++ b/src/app/classes/classes.component.css
@@ -39,7 +39,7 @@
 
 }
 
-h1 {
+.black-title {
     grid-column-start: 4;
     grid-column-end: span 6;
     grid-row-start: 2;
@@ -58,4 +58,52 @@ p {
     font-weight: 400;
     padding-left: 20%;
     padding-right: 20%;
+}
+#pink-link {
+    background-color: hotpink;
+    padding: 10px;
+    color: white;
+}
+
+.quote {
+    margin-top: 70px;
+    padding: 50px;
+    background-color: rgb(245, 206, 232);
+}
+
+#class {
+    float: left;
+    width: 50%;
+}
+
+p {
+    font-size: 20px;
+}
+
+.browse-classes {
+    margin-top: 120px;
+    background-color: white;
+}
+
+.title {
+    padding-top: 100px;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 6.5px;
+    font-size: 50px;
+}
+
+.class-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; 
+    justify-items: center;
+    grid-gap: 20px;
+    padding: 30px;
+}
+
+#NYC {
+    height: 400px;
+    width: 400px;
+
 }
