--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -23,7 +23,7 @@
       <h1 class="title">BROWSE CLASSES</h1>
     </div>
     <div class="class-grid">
-      <div *ngFor="let class of classes">
+      <div *ngFor="let class of classes" (click)="goToDetailPage(class)">
       
         <h4><img id="NYC" src="{{class.image}}"><br><br>{{class.title}} - {{class.location}}</h4>
       </div>
