updated classes images

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,3 +1,6 @@
-<p>
-  shop works!
-</p>
+<section class="america">
+  <div>
+    <h1 id="shop">SHOP</h1>
+    <p>Go ahead, get something sweet — we’ll ship it directly to your door, or you can pick up at one of our locations.</p>
+  </div>
+</section>
