--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,10 +9,9 @@
         <li><a href="/locations">Locations</a></li>
         <li><a href="/about">About</a></li>
       </ul>
-      <a href="/cart" class="search">&#128269; SEARCH</a>
-      <a href="/cart" class="cart">&euro; CART</a>
+      <a href="/cart" class="search">SEARCH</a>
+      <a href="/cart" class="cart">CART</a>
     </nav>
-    
   </div>
-  
 </header>
+
