--- a/src/app/class-detail/class-detail.component.html
+++ b/src/app/class-detail/class-detail.component.html
@@ -1,5 +1,6 @@
 <p>
   class-detail works!
 </p>
-<h2>This class has id number: {{classId}}</h2>
-<img src="{{class.image}}" alt="">
+<h3>{{(classToDisplay | async)?.title}}</h3>
+  <!-- constructor(public title: string, public location: string, public image: string,  public description: string, public id: number) { }
+} -->
