fix spacing issue on classes page

--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -25,8 +25,8 @@
     <div class="class-grid">
       <div *ngFor="let class of classes | async| class:selectedLocation" (click)="goToDetailPage(class)">
       
-        <h4><img id="NYC" src="./assets/img/{{class.image}}"><br><br>{{class.title}} - {{class.location}}</h4>
-        <h1>{{class.$key}}</h1>
+        <h4><img id="NYC" src="./assets/img/{{class.image}}"><br><br>{{class.title}}<br> - {{class.location}}</h4>
+        
       </div>
     </div>
 </section>
