--- a/src/app/class-detail/class-detail.component.html
+++ b/src/app/class-detail/class-detail.component.html
@@ -1,6 +1,10 @@
 <p>
   class-detail works!
 </p>
-<h3>{{(classToDisplay | async)?.title}}</h3>
+<section class="main">
+<h1>{{(classToDisplay | async)?.title}}</h1>
+
+
+</section>
   <!-- constructor(public title: string, public location: string, public image: string,  public description: string, public id: number) { }
 } -->
