--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -10,7 +10,7 @@
     <br><br>
     Questions? Check out our Classes FAQ.</p>
     <br><br>
-    <a id="pink-link" href="">BROWSE CLASSES</a>
+    <a id="pink-link" href="/classes">BROWSE CLASSES</a>
     </div>
     <div class="quote">
       <img id="class" src="./assets/img/DC-Logan-Media-Baking-Class_800x.jpg">
